--- a/project4/report/references.bib
+++ b/project4/report/references.bib
@@ -1,9 +1,9 @@
-@misc{H-Jensen,
+@misc{Hjort-Jensen,
 	author = "Morten Hjort-Jensen",
 	title = "Computational physics",
 	howpublished = "lecture notes",	
 	year = "2015",
-	note = "Accessible at course github repository. 551 pages.",
+	note = "Accessible at course github repository."
 }
 
 @misc{Johansson,
@@ -19,11 +19,13 @@
 	title = "Ordinary differential equations",
 	howpublished = "lecture notes",	
 	year = "2018",
-	note = "Accessible at course github repository. 25 pages.",
+	note = "Accessible at course github repository"
 }
 
-@misc{GitHubFYS4150,
+@misc{fys4150,
 	author = "Morten Hjort-Jensen",
 	title = "GitHub FYS4150 UiO",
+	howpublished = "Computational Physics Lectures",
+	year= "2018"	
 	url = "https://github.com/CompPhysics/ComputationalPhysics"
 }
